Bug 145712 - nsMsgRDFDataSource::Cleanup should not call nsIObserverService::removeObserver; (Av1) <nsMsgRDFDataSource.cpp>. r+sr=neil.